@@ -1,3 +1,4 @@
+	* added some functions missing from the python binding
 	* fixed rare piece picker bug
 	* fixed invalid torrent_status::finished_time
 	* fixed bugs in dont-have and upload-only extension messages
